Изменение в проекте. 1. Добавил 3 уровня сложности 2. Создал Новую категорию

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:theme="@style/Theme.Crocodile"
         tools:targetApi="31">
         <activity
-            android:name=".ActivityGame"
+            android:name=".PageHard"
+            android:exported="false" />
+        <activity
+            android:name=".PageAverage"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
