Изменение в проекте. 1. Добавил главное меню 2. Кнопка с общими правилами игры 3. Заменил рисунок кнопки "player" - при нажатии меняеться рисунок. 4. Добавил в массив, новых слов.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,16 @@
         android:theme="@style/Theme.Crocodile"
         tools:targetApi="31">
         <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
             android:name=".PageHard"
             android:exported="false" />
         <activity
             android:name=".PageAverage"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".MainMenu"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
